# my_ai_crew

./: .gitignore  README.md  main.py  pyproject.toml
config/: settings.py
data/metrics/: agents_metrics.jsonl  aggregated_metrics.json  model_evaluation_20260108_193519.json  prompts_metrics.jsonl  rag_metrics.jsonl  system_metrics.jsonl
docs/: model_selection_and_evaluation.md
notebooks/: model_testing.ipynb
notebooks/data/memory/: chroma.sqlite3
notebooks/data/metrics/: rag_metrics.jsonl
src/agents/: memory_agent.py
src/memory/: memory_store.py  short_term_memory.py
src/prompts/: memory_agent_prompt.py
src/tools/: memory_tools.py
src/utils/: logger.py  metrics_logger.py
